Linting Fail Scenario

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>Static HTML Site</title>
   </head>
   <body>
-    <p>This is the first paragraph in a simple Static HTML site. There is no <strong>CSS</strong> or <script>JavaScript</script>.</p>
+    <h1>Udacity Capstone Project</h1>
+    <p>Hi, my name is Deepak Madisetty and this is a static website that is built as part of the capstone project</p> <strong>CSS</strong> or <script>JavaScript</script>.</p>
   </body>
 </html>
