Fixed index.html for Linting to pass

--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
   </head>
   <body>
     <h1>Udacity Capstone Project</h1>
-    <p>Hi, my name is Deepak Madisetty and this is a static website that is built as part of the capstone project</p> <strong>CSS</strong> or <script>JavaScript</script>.</p>
+    <p>Hi, my name is Deepak Madisetty and this is a static website that is built as part of the capstone project</p>
   </body>
 </html>
